[package]
name = "server_nano"
version = "0.2.1"
edition = "2021"
authors = ["Jonatas Borges <jonataslaw@hotmail.com>"]
license = "MIT"
description = "A fast and lightweight HTTP server implementation in Rust."
repository = "https://github.com/jonataslaw/server_nano"

[dependencies]
log = "0.4"
itoa = "1"
bytes = "1"
httpdate = "1"
httparse = "1"
once_cell = "1"
may = { version = "0.3.45", default-features = false }
serde_json = "1"
serde = "1.0.159"

[dev-dependencies]

[features]
default = ["may/default"]

[profile.release]
opt-level = 3
debug = false
codegen-units = 16
lto = true
incremental = false
overflow-checks = false
